[package]
name = "abow"
version = "0.1.3"
authors = ["Alex Maiorella <alex@maiorella.org>"]
repository = "https://github.com/donkeyteethUX/abow"
edition = "2018"
keywords = ["slam", "bag-of-words", "visual-odometry", "dbow", "loop-closure"]
categories = ["algorithms", "computer-vision", "mathematics", "science"]
description = "Visual bag of words for fast image matching"
exclude = ["data", "vocabs"]
readme = "README.md"
license = "MIT"

[features]
default = ["opencv"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
opencv = { version = "0.46", optional = true }
bitvec = "0.20"
rand = "0.8"
bincode = "1.3"
thiserror = "1.0"

[[example]]
name = "match"
required-features = ["opencv"]

[[example]]
name = "create-voc"
required-features = ["opencv"]

[profile.release]
debug = true

[package.metadata.docs.rs]
no-default-features = true