[package]
authors     = ["Alex Maiorella <alex@maiorella.org>"]
categories  = ["algorithms", "computer-vision", "mathematics", "science"]
description = "Visual bag of words for fast image matching"
edition     = "2018"
exclude     = ["data", "vocabs"]
keywords    = ["slam", "bag-of-words", "visual-odometry", "dbow", "loop-closure"]
license     = "MIT"
name        = "abow"
readme      = "README.md"
repository  = "https://github.com/donkeyteethUX/abow"
version     = "0.4.2"

[features]
default = ["opencv", "bincode"]

[dependencies]
bincode   = { version = "1.3", optional = true }
bitvec    = "1.0"
opencv    = { version = "0.65", optional = true }
rand      = "0.8"
serde     = { version = "1.0", features = ["derive"] }
smallvec  = { version = "1.6", features = ["serde"] }
thiserror = "1.0"

[[example]]
name              = "match"
required-features = ["opencv", "bincode"]

[[example]]
name              = "create-voc"
required-features = ["opencv", "bincode"]

[package.metadata.docs.rs]
features            = ["bincode"]
no-default-features = true
